--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express-firebase-middleware": "^2.0.0",
     "firebase": "^5.3.0",
     "firebase-admin": "^5.13.0",
+    "milligram": "^1.3.0",
     "pg": "^7.4.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -22,6 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "nodemon server & npm run start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
