--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
@@ -10,6 +11,7 @@
     "express-firebase-middleware": "^2.0.0",
     "firebase": "^5.3.0",
     "firebase-admin": "^5.13.0",
+    "immutable": "^3.8.2",
     "milligram": "^1.3.0",
     "pg": "^7.4.3",
     "react": "^16.4.1",
@@ -19,7 +21,10 @@
     "react-scripts": "1.1.4",
     "recompose": "^0.27.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "slate": "^0.36.2",
+    "slate-html-serializer": "^0.6.17",
+    "slate-react": "^0.14.3"
   },
   "scripts": {
     "start": "react-scripts start",
