--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.2",
+    "@fortawesome/free-solid-svg-icons": "^5.2.0",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
     "ajv": "^6.5.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-firebase-middleware": "^2.0.0",
-    "firebase": "^5.3.0",
-    "firebase-admin": "^5.13.0",
+    "firebase": "^5.3.1",
+    "firebase-admin": "^5.13.1",
+    "i": "^0.3.6",
     "immutable": "^3.8.2",
     "milligram": "^1.3.0",
     "pg": "^7.4.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
