--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # build folder
-/dist
+/client/build
 
 # dependencies
 /node_modules
+/client/node_modules
 
 # testing
-/coverage
+/client/coverage
 
 # production
-/build
+/client/build
 
 # misc
 .DS_Store
