--- a/package.json
+++ b/package.json
@@ -1,45 +1,36 @@
 {
   "name": "recipe-book",
   "version": "0.1.0",
+  "engines": {
+    "node": "8.9.x"
+  },
+  "cacheDirectories": [
+    "node_modules",
+    "client/node_modules"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mhedrick/recipe-book"
+  },
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.2",
-    "@fortawesome/free-solid-svg-icons": "^5.2.0",
-    "@fortawesome/react-fontawesome": "0.1.0-11",
     "ajv": "^6.5.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-firebase-middleware": "^2.0.0",
-    "firebase": "^5.3.1",
+    "firebase": "^5.4.0",
     "firebase-admin": "^5.13.1",
     "i": "^0.3.6",
-    "immutable": "^3.8.2",
-    "milligram": "^1.3.0",
-    "pg": "^7.4.3",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "recompose": "^0.27.1",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "slate": "^0.36.2",
-    "slate-html-serializer": "^0.6.17",
-    "slate-react": "^0.14.3"
+    "morgan": "^1.9.0",
+    "path": "^0.12.7",
+    "pg": "^7.4.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "server": "nodemon server & npm run start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "node server",
+    "startlocal": "nodemon server && cd client/ && npm run start",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
-  "devDependencies": {
-    "enzyme": "^3.4.1",
-    "enzyme-adapter-react-16": "^1.2.0",
-    "react-test-renderer": "^16.4.2"
-  }
+  "devDependencies": {}
 }
