--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 .env.test.local
 .env.production.local
 .vscode
+/migrations
 
 npm-debug.log*
 yarn-debug.log*
@@ -27,3 +28,5 @@ yarn-error.log*
 
 # secret keys
 mhedrick-recipebook-firebase-adminsdk-*.json
+.env
+prod_key.json
